[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutonomousAgentRepo"
version = "0.1.0"
authors = ["Devin <devin@autonomousagents.com>"]
description = "A project to define the interface for an autonomous LLM-backed Agent capable of running tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
